# proyecto-ir-2025A

./: .gitignore  README.md  pyproject.toml
src/: cli.py  evaluation.py  ir.py  main.py
