[tool.poetry]
name = "proyecto-ir"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Paul Lora", "Byron Carpio", "Diego Suquillo"]
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = ">3.13,<4.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
poethepoet = "^0.25.0"
scikit-learn = "^1.6.1"
ir-datasets = "0.5.10"
inquirerpy = "0.3.4"
nltk = "3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
